--- a/home.html
+++ b/home.html
@@ -17,16 +17,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav vh-100">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="home.html"><img src="reasoure/img/image.svg" width="25px" height="25px" class="" alt="">Home</a>
+          <a class="nav-link active" aria-current="page" href=""><img src="" width="25px" height="25px" class="" alt="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="profile.html"><img src="" width="25px" height="25px" class="" alt="">Profile</a>
+          <a class="nav-link active" aria-current="page" href=""><img src="" width="25px" height="25px" class="" alt="">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="globalChat.html"><img src="" width="25px" height="25px" class="" alt="">Global chat</a>
+          <a class="nav-link active" aria-current="page" href=""><img src="" width="25px" height="25px" class="" alt="">Global chat</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="acount.html"><img src="" width="25px" height="25px" class="" alt="">Acount</a>
+          <a class="nav-link active" aria-current="page" href=""><img src="" width="25px" height="25px" class="" alt="">Acount</a>
         </li>
       </ul>
     </div>
@@ -44,7 +44,7 @@
   <div class="offcanvas-body container small">
     <div class="container text-center">
   <div class="row row-cols-auto">
-    <div class="col"><a href="post.html"><button type="button" class="btn btn-outline-primary"><img src="reasoure/img/image.svg" class="p-1 rounded w-100 mx-auto" alt="..."></button></a></div>
+    <div class="col"><a href=""><button type="button" class="btn btn-outline-primary"><img src="reasoure/img/image.svg" class="p-1 rounded w-100 mx-auto" alt="..."></button></a></div>
     <div class="col">Column</div>
     <div class="col">Column</div>
     <div class="col">Column</div>
@@ -61,10 +61,10 @@
 <div class="container pb-4 mb-4 overflow-y-scroll">
  <div class="card mb-2">
  <div class="card-body m-0">
-  <h5 class="card-title"><img src="reasoure/img/1374919.512.png" class="img-thumbnail rounded-circle object-fit-contain" width="50px" height="50px" alt="">Card title</h5>
+  <h5 class="card-title"><img src="" class="img-thumbnail rounded-circle object-fit-contain" width="50px" height="50px" alt="">Card title</h5>
  </div>
  <hr class="mb-1">
-  <img src="reasoure/img/1374919.512.png" class="card-img-top rounded w-100 mx-auto" alt="...">
+  <img src="" class="card-img-top rounded w-100 mx-auto" alt="...">
   <hr class="mt-1">
   <div class="card-body">
     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
